gateway/1.5/modules/ROOT/pages/_partials/prerequisites.adoc
//tag::intro[]
Flex Gateway runs on the following Long Term Support (LTS) versions of Linux:
//end::intro[]

//tag::amazon-linux[]
Amazon Linux 2
//end::amazon-linux[]

//tag::centos[]
CentOS 8
//end::centos[]

//tag::curl[]
The `curl` command-line tool.
//end::curl[]

//tag::debian[]
Debian (Buster, Bullseye)
//end::debian[]

//tag::docker[]
A Docker installation.
//end::docker[]

//Requires local/page variable that specifies the version, such as :version-helm: 3.0.0
//tag::helm[]
A minimum Helm version of 3.0.0 is required. 
//end::helm[]

//tag::kubectl[]
The Kubernetes `kubectl` command-line tool.
//end::kubectl[]

//tag::red-hat[]
Red Hat Enterprise Linux (8, 9)
//end::red-hat[]

//tag::ubuntu[]
Ubuntu (Bionic, Focal, Jammy)
//end::ubuntu[]

//pls leave blank line in rabc-permission-k8
// tag::rbac-permission-k8[]

When deploying Flex Gateway to a Kubernetes cluster that enables role-based access control (RBAC), you must have cluster-level permissions to permit installation of custom resource definitions (CRDs) used by Flex Gateway. 
// end::rbac-permission-k8[]
// tag::rbac-role-openshift[]
In OpenShift, the `cluster-admin` role provides this level of access.
// end::rbac-role-openshift[]